--- a/package.json
+++ b/package.json
@@ -38,9 +38,14 @@
     "@angular-eslint/template-parser": "15.2.0",
     "@angular/cli": "~15.1.4",
     "@angular/compiler-cli": "^15.1.0",
+    "@tailwindcss/aspect-ratio": "latest",
+    "@tailwindcss/forms": "latest",
+    "@tailwindcss/line-clamp": "latest",
+    "@tailwindcss/typography": "latest",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.48.1",
     "@typescript-eslint/parser": "5.48.1",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -50,8 +55,11 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "ngx-tailwind": "^4.0.0",
+    "postcss": "^8.4.14",
     "prettier": "^2.8.4",
     "prettier-eslint": "^15.0.1",
+    "tailwindcss": "^3.1.6",
     "typescript": "~4.9.4"
   }
 }
